<resources>
    <string name="app_name">DaouData</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sqlite_require">서버가 응답하지 않습니다.</string>
    <string name="sqlite_error">서버에 문제가 있습니다. 다시시도해주세요.</string>
    <string name="sqlite_success">성공.</string>
    <string name="sqlite_exist">이미 데이타가 존재 합니다.</string>
    <string name="sqlite_confirm">비밀번호가 서로 일치하지 않습니다.</string>
    <string name="sqlite_select_branch">대리점번호를 입력해 주세요</string>
    <string name="title_login">로그인</string>
    <string name="title_profile">프로필</string>
    <string name="title_credit">신용카드결제</string>
    <string name="title_cash">현금 결제</string>
    <string name="title_history">내역 조회</string>
    <string name="title_coupon">쿠폰관리</string>
    <string name="title_coupon_details">Coupon 등록</string>
    <string name="title_extended">기간연장</string>
    <string name="title_signup">회원가입</string>
    <string name="title_user_add">회원가입\n신규 사업자 등록 (밴 신규)</string>
    <string name="title_user_edit">사용자 정보 수정</string>
    <string name="title_signup_complete">회원가입 완료</string>
    <string name="title_register_van">단말기 등록/수정</string>
    <string name="title_list_company">단말기 리스트</string>
    <string name="title_payment_period">사용기간 결제</string>
    <string name="title_receipt">신용카드 영수증</string>
    <string name="title_receipt_cash">현금 영수증</string>
    <string name="title_config">일반설정</string>
    <string name="title_cancellist">분기별내역</string>
    <string name="title_canceldailylist">일별목록</string>
    <string name="title_couponlist">쿠폰 리스트</string>
    <string name="title_cancel_selector"> 결제 취소 </string>
    <string name="title_cancel_payment"> 결제취소 </string>
    <string name="title_cancel_cash"> 현금 취소 </string>
    <string name="title_register_user">가맹점 직원 등록</string>
    <string name="title_no_string"> </string>
    <string name="login_user_email_hint">아이디 (이메일)</string>
    <string name="login_passwd_hint">비밀 번호</string>
    <string name="login_stored_in_the_phone">이 전화기에 저장</string>
    <string name="login_find">ID/PW 찾기</string>
    <string name="login_register"> 사용자 등록</string>
    <string name="login_login_btn">로그인</string>
    <string name="login_signup_btn">회원 가입</string>
    <string name="login_cancel_btn">취소</string>
     <string name="hint_txtcard_cash">휴대폰 또는 사업자번호 입력</string>
     <string name="hint_txtcard_cash2">금액을 입력해 주세요</string>
     <string name="hint_txtcard_reader">카드를 읽혀주십시오.</string>
     <string name="hint_txtpin_reader">PIN</string>
     <string name="hint_txtcard_keyin">카드번호를 입력해 주십시오.</string>
     <string name="hint_txtcard_checkpass">카드를 접촉해 주십시오.</string>
    <string name="signup_new_franchise_registration">신규 가맹점 등록\n(기존 밴가맹점이 아닌 경우)</string>
    <string name="sign_up_new_registration">신규 등록\n(밴 가맹점인 경우)</string>
    <string name="signup_registration_staff_affiliated_companies">가맹사업자 직원 등록</string>
    <string-array name="register_arrays">
        <item>신규가맹점회원가입</item>
        <item>신규 등록</item>
        <item>직원 등록</item>
        <item>정보 수정</item>
    </string-array>
    <string-array name="quarterly_arrays">
        <item>1분기</item>
        <item>2분기</item>
        <item>3분기</item>
        <item>4분기</item>
    </string-array>
     <string-array name="type_arrays">
        <item>전체</item>
        <item>신용</item>
        <item>현금</item>
        
    </string-array>
    <string-array name="reader_type">
        <item>Bluetooth</item>
        <item>Ear jack</item>
    </string-array>
    <string name="bt_search_btn">장치를 검색</string>
    <string name="bt_stop_search_btn">중지</string>
    <string name="bt_unregister_mobile_printer_">등록되지 않은 모바일프린터 입니다.</string>
    <string name="log_title">Loading...</string>
    <string name="log_conten">Please wait ...</string>
    <string-array name="listvan">






      <item>JTNet</item>
       
    </string-array>
    <string-array name="list_month">
        <item>일시불</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>24</item>
        <item>36</item>
    </string-array>
    <string name="please_select_company_first">먼저 가맹점을 선택해야 합니다.</string>
    <string name="test_card_disp">4227270020038400</string>
    <string name="test_card_full">4227270020038400=18062211216216600000</string>
    <string name="privacy_policy_add">전자금융거래약관, 개인정보 취급방침에 동의</string>
    <string name="privacy_policy_edit">이 장치에 사용자 정보 저장</string>
    <string name="please_input_total_amount">결제금액을 입력해 주세요.</string>
    <string name="please_input_card_value">결제 정보를 입력 해 주세요.</string>
    <string name="format_digital_clock">yyyy년 MM월 dd일 까지 사용이 가능합니다</string>
    <string name="msg_requireSign">서명란에 싸인해 주십시요.</string>
    <string name="msg_log_out">로그 아웃</string>
    <string name="msg_recipt_is_not_saved">결제가 완료되었습니다.</string>
    <string name="msg_recipt_will_be_synced_later">결제가 완료되었습니다.</string>
    <string name="msg_recipt_is_not_saved_in_Local">결제가 완료되었습니다.</string>
    <string name="msg_request_payment_is_not_successful">결제에 실패 하였습니다. 다시 시도해 주세요.</string>
    <string name="msg_request_cancel_is_not_successful">결제 취소에 실패하였습니다. 다시 시도해 주세요.</string>
    <string name="msg_recipt_cancel_will_be_synced_later">결제가 취소 되었습니다.</string>
    <string name="msg_recipt_cancel_is_not_saved_in_Local">결제가 취소 되었습니다.</string>
    <string name="msg_register_user_error">등록된 동일한 이메일 있습니다.</string>
    <string name="msg_unable_to_connect_bluetooh_device">블루투스 장치에 연결할 수 없습니다.</string>
    <string name="msg_insert_company_success">단말기 정보가 저장 되었습니다.</string>
    <string name="msg_insert_company_failed">단말기 저장에 실패 하였습니다.</string>
    <string name="msg_insert_company_to_server_failed"> 서버간 연결이 실패 하였습니다.</string>
    <string name="msg_download_company_success">개시 거래요청이 성공하였습니다.</string>
    <string name="msg_minmum_password_register">암호는 최소 6자리 입니다.</string>
    <string name="msg_wrong_password">비밀번호가 일치하지 않습니다.</string>
    <string name="msg_wrong_ID">아이디가 일치하지 않습니다.</string>
    <string name="msg_email_exist">이미 존재하는 이메일 입니다.</string>
    <string name="msg_companyno_exist">사업자 번호가 이미 등록되어 있습니다.</string>
    <string name="msg_app_updated_title">새로운 업데이트 버전이 있습니다. 업데이트 하시겠습니까?</string>
    <string name="msg_yes">예(yes)</string>
    <string name="msg_no">아니요(No)</string>
    <string name="msg_turn_off_wifi">결제정보 사용을 위해 무선인터넷을 중지 합니다.</string>
    <string name="msg_exist_branch">코드가 확인 되었습니다.</string>
    <string name="msg_not_exist_branch">코드번호가 일치하지 않습니다.</string>
    <string name="button_ok">OK</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="recipt_email_select_address">이메일 주소를 선택해 주세요!</string>
    <string name="recipt_email_title">페이펀앱을 통해 발행된 영수증 입니다.</string>
    <string name="recipt_email_choose_client">Choose an Email client :</string>
<string name="cancel">Cancel</string>
<string name="paired_devices">Paired Devices</string>
<string name="discovered_devices">Discovered Devices</string>
<string name="check_card">Start</string>
<string name="device_info">Device Info</string>
<string name="_1_open_ter">1. Open Ter.</string>
<string name="_2_get_cert">2. get Cert</string>
<string name="_3_key_download">3.Key Download</string>
<string name="get_pub_key">get Pub. Key</string>
    <string name="vandl2_dialog_title">사업자 번호 입력</string>
    <string name="vandl2_dialog_title_sub">사업자 등록번호 10자리를 입력해 주세요</string>
    <string name="vandl2_dialog_content">사업자 번호를 입력해 주세요</string>
    <string name="vandl3_dialog_title">단말기 번호 입력</string>
    <string name="vandl3_dialog_title_sub">단말기 번호 8자리를 입력해 주세요</string>
    <string name="vandl3_dialog_content">단말기 번호를 입력해 주세요</string>
    <string name="vandl4_dialog_title_1">Van 사업자</string>
    <string name="vandl4_dialog_title_2">사업자 번호</string>
    <string name="vandl4_dialog_title_3">가맹점 명</string>
    <string name="vandl4_dialog_title_4">가맹점 주소</string>
    <string name="vandl4_dialog_title_5">가맹점 전화번호</string>
    <string name="vandl4_dialog_title_6">대리점 전화번호</string>
    <string name="vandl4_dialog_title_7">Van 전화번호</string>
    <string name="vandl4_dialog_content">주의! \n장비의 전원을 끄거나 분리하지 마세요.</string>
    <string name="vandl4_dialog_title">단말기 정보확인</string>
    <string name="machine_division_general">일반 사업자</string>
    <string name="machine_division_multiple">다중 사업자</string>
    <string name="machine_division_multiple_explain">해당 사업자는 대리점에 문의 해 주세요.</string>
</resources>