<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_info"
        android:id="@+id/btnGetDeviceInfo" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_card"
        android:id="@+id/btnCheckCard" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_open_ter"
        android:id="@+id/btnOpenTerminial" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2_get_cert"
        android:id="@+id/btnCertReq" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3_key_download"
        android:id="@+id/btnSecurKeyDownload" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_pub_key"
        android:id="@+id/btngetPublicKey" />
</LinearLayout>