<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="#fff"
    android:scrollbars="vertical">
    
    <TextView
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/paired_devices" />
    
    <ListView
	    android:id="@+id/pairedDeviceList"
	    android:layout_width="fill_parent"
	    android:layout_height="200dp" />
    
    <TextView
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/discovered_devices" />
	    
	<ListView
	    android:id="@+id/discoveredDeviceList"
	    android:layout_width="fill_parent"
	    android:layout_height="200dp" />
	    
	<Button
       	android:id="@+id/cancelButton"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:background="@drawable/button_confirm_selector"
       	android:layout_width="fill_parent"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"
       	android:text="@string/cancel" />
    
</LinearLayout>