<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/border_content"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal|bottom"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_vandl1_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/vandl3_dialog_title"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tv_vandl1_title_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/vandl3_dialog_title_sub"
                        android:textAlignment="center"
                        android:textColor="#222222"
                        android:textSize="16dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#acacac"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/txtResMachineCode"
                        style="@style/editextCardReading"
                        android:layout_height="40dp"
                        android:background="@drawable/border_gray"
                        android:gravity="center_vertical|left"
                        android:hint="@string/vandl3_dialog_content"
                        android:inputType="number"
                        android:maxLength="8"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:textAlignment="center"
                        android:layout_margin="0dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal">
                        <RadioGroup
                            android:id="@+id/rdgMachineDivision"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/rdbDivisionGeneral"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/machine_division_general"
                                android:layout_gravity="center_horizontal"
                                android:checked="true"
                                android:textColor="@android:color/black"/>
                            <RadioButton
                                android:id="@+id/rdbDivisionMultiple"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/machine_division_multiple"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@android:color/black"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/machine_division_multiple_explain"/>
                        </LinearLayout>

                </LinearLayout>

                <include
                    layout="@layout/dialog_vandl_footer"></include>

            </LinearLayout>


        </LinearLayout>

        <include
            layout="@layout/dialog_vandl_header"></include>


    </FrameLayout>
</ScrollView>